--- a/we_are_together/templates/create_project.html
+++ b/we_are_together/templates/create_project.html
@@ -4,7 +4,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Creat Project</legend>
+                <legend class="border-bottom mb-4" id="add_project_title    ">Add Your Own Project</legend>
                 <div class="form-group">
                     {{ form.project_name.label(class="form-control-label") }}
 
