--- a/we_are_together/templates/home.html
+++ b/we_are_together/templates/home.html
@@ -97,52 +97,53 @@ We have created an ecosystem that assimilates the memory of the Holocaust within
             <div class="project_card">
                 <div class="project_card_upper">
                     <h2>Volunteer Website</h2>
-                    <p>Help us construct corona-friendly care-packages for our Holocaust Heroes, celebrating their birthdays in covid times.</p>
+                    <p>We’d like to create a website for setting up one-time volunteer event.
+More than welcome to join and offer ideas for more features.</p>
                     <h3>Looking For:</h3>
-                    <h5>Software Engineer, Copywriter</h5>
+                    <h5>Producer, Costumes/Makeup, Actors</h5>
                 </div>
                 <div class="project_card_lower">
                     <h2>Development</h2>
-                    <h3>45</h3>
+                    <h3>1</h3>
                 </div>
             </div>
 
             <div class="project_card">
                 <div class="project_card_upper">
-                    <h2>Volunteer Website</h2>
-                    <p>Help us construct corona-friendly care-packages for our Holocaust Heroes, celebrating their birthdays in covid times.</p>
+                    <h2>Promo Video</h2>
+                    <p>We will write and film a promo video for Heroes art installation for Ramat Gan municipality.</p>
                     <h3>Looking For:</h3>
-                    <h5>Software Engineer, Copywriter</h5>
+                    <h5>SProducer, Costumes/Makeup, Actors</h5>
                 </div>
                 <div class="project_card_lower">
-                    <h2>Development</h2>
-                    <h3>45</h3>
+                    <h2>Creative</h2>
+                    <h3>2</h3>
                 </div>
             </div>
 
             <div class="project_card">
                 <div class="project_card_upper">
-                    <h2>Volunteer Website</h2>
+                    <h2>Corona care-box</h2>
                     <p>Help us construct corona-friendly care-packages for our Holocaust Heroes, celebrating their birthdays in covid times.</p>
                     <h3>Looking For:</h3>
-                    <h5>Software Engineer, Copywriter</h5>
+                    <h5>Anyone</h5>
                 </div>
                 <div class="project_card_lower">
-                    <h2>Development</h2>
-                    <h3>45</h3>
+                    <h2>Volunteer</h2>
+                    <h3>3</h3>
                 </div>
             </div>
 
             <div class="project_card">
                 <div class="project_card_upper">
-                    <h2>Volunteer Website</h2>
-                    <p>Help us construct corona-friendly care-packages for o.</p>
+                    <h2>Educational Program</h2>
+                    <p>Join us in writing different educaitonal materials for middle school’s, highlighting our hero’s stories of bravery.</p>
                     <h3>Looking For:</h3>
-                    <h5>Software Engineer, Copywriter</h5>
+                    <h5>Teachers, Counselors</h5>
                 </div>
                 <div class="project_card_lower">
-                    <h2>Development</h2>
-                    <h3>45</h3>
+                    <h2>Education</h2>
+                    <h3>4</h3>
                 </div>
             </div>
 
