added presentation and fixed typo

--- a/we_are_together/templates/home.html
+++ b/we_are_together/templates/home.html
@@ -113,7 +113,7 @@ More than welcome to join and offer ideas for more features.</p>
                     <h2>Promo Video</h2>
                     <p>We will write and film a promo video for Heroes art installation for Ramat Gan municipality.</p>
                     <h3>Looking For:</h3>
-                    <h5>SProducer, Costumes/Makeup, Actors</h5>
+                    <h5>Producer, Costumes/Makeup, Actors</h5>
                 </div>
                 <div class="project_card_lower">
                     <h2>Creative</h2>
